# Gen1Battler

./: .gitignore  CMakeLists.txt  README.md  test_data_load.cpp
cmake/: FetchCatch2.cmake
include/battlelib/: battle.hpp
src/: CMakeLists.txt  autobattler_main.cpp  client_main.cpp  main.cpp  network_test.cpp  server_main.cpp
src/ai/: ai_interface.hpp  gen1_ai.cpp  gen1_ai.hpp  random_ai.cpp  random_ai.hpp  simple_ai.cpp  simple_ai.hpp
src/autobattler/: auto_battle.hpp  evolution.hpp  player_state.hpp  rarity.hpp  shop.hpp
src/client/: game_client.cpp  game_client.hpp
src/core/: battle.cpp  battle.hpp  battle_temp.cpp  enums.hpp  move.cpp  move.hpp  move_effect.hpp  pokemon.cpp  pokemon.hpp  rng.hpp
src/data/: game_data.hpp  loader.cpp  loader.hpp  move_parser.cpp  move_parser.hpp  moves.json  species.json  type_chart.json
src/engine/: accuracy.cpp  accuracy.hpp  damage.cpp  damage.hpp  move_effects.cpp  move_effects.hpp
src/network/: protocol.cpp  protocol.hpp  socket.cpp  socket.hpp
src/server/: game_server.cpp  game_server.hpp  network_battle.cpp  network_battle.hpp  output_capture.hpp  team_generator.cpp  team_generator.hpp
src/ui/: cli.cpp  cli.hpp
tests/: CMakeLists.txt  test_accuracy.cpp  test_battle.cpp  test_damage.cpp  test_move_effects.cpp  test_type_effectiveness.cpp
